--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
-    "@mui/x-charts": "^6.0.0-alpha.4",
+    "@mui/x-charts": "^6.19.1",
     "@mui/x-data-grid": "^6.10.0",
     "@mui/x-data-grid-generator": "^6.10.0",
     "@mui/x-date-pickers": "^6.11.0",
-    "apexcharts": "^3.41.0",
+    "apexcharts": "^3.45.2",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.0",
-    "chart.js": "^4.3.2",
+    "chart.js": "^4.4.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "lodash": "^4.17.21",
